<resources>
    <string name="app_name">课堂定位</string>
    <string name="title_classroom">课堂</string>
    <string name="title_forum">论坛</string>
    <string name="message_classroom">这是教室碎片</string>
    <string name="message_forum">这是论坛碎片</string>
    <string name="mail">tonygreendev@gamil.com</string>
    <string name="name">Tony Green</string>
    <string name="title_activity_login">Sign in</string>
    <string name="scan_text">扫一扫</string>
    <string name="toolbar_QRCode_title">Scan</string>
    <string name="remember_password_msg">记住密码</string>
    <string name="LogIn_account_str">请输入学号：</string>
    <string name="LogIn_password_str">请输入密码：</string>
    <string name="LogIn_btn_msg">登录</string>
    <string name="nav_menu_title1">Call</string>
    <string name="nav_menu_title2">Friends</string>
    <string name="nav_menu_title3">Location</string>
    <string name="nav_menu_title4">Mail</string>
    <string name="nav_meu_title5">Tasks</string>
    <string name="dialog_msg_1">相册</string>
    <string name="dialog_msg_2">拍照</string>
    <string name="dialog_img_3">取消</string>
    <string name="nav_menu_title6">退出登录</string>
    <string name="todo">TODO</string>
    <string name="type_teacher">教师</string>
    <string name="type_student">学生</string>
    <string name="toolbar_end_title">下课</string>
    <string name="btn_send_text">发送</string>
    <string name="input_text_hint">输入你想说的..</string>

</resources>
