<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    android:paddingBottom="15dp"
    android:paddingStart="15dp"
    android:paddingTop="15dp"
    android:paddingEnd="15dp"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/account_edit"
            android:theme="@style/MyEditText"
            android:textCursorDrawable="@drawable/cursor_color"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/account"
            android:textColor="#FFFFFF"
            android:hint="@string/LogIn_account_str"
            android:inputType="number" />

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/password_edit"
            android:theme="@style/MyEditText"
            android:textCursorDrawable="@drawable/cursor_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password"
            android:textColor="#FFFFFF"
            android:inputType="numberPassword"
            android:hint="@string/LogIn_password_str"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/remember_password"
                android:buttonTint="@color/cardview_light_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="PrivateResource" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:text="@string/remember_password_msg"/>

        </LinearLayout>
        <RadioGroup
            android:id="@+id/choose_type"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:text="@string/type_teacher"
                android:textColor="#FFFFFF"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/teacher"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:text="@string/type_student"
                android:textColor="#FFFFFF"
                android:textSize="18sp"/>
            <RadioButton
                android:id="@+id/student"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </RadioGroup>
        <Button
            android:layout_marginTop="10dp"
            android:background="@drawable/login_btn_background"
            android:id="@+id/Login_btn"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:text="@string/LogIn_btn_msg"/>
    </LinearLayout>

</LinearLayout>